--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,23 +3,30 @@
 @tailwind utilities;
 
 @layer base {
-  html, body {
+  html,
+  body {
     @apply bg-[#F0F0F0] h-screen w-screen overflow-x-hidden;
     font-family: 'Noto Sans TC', sans-serif;
   }
 }
 @layer utilities {
   .container {
-    @apply px-[71px]
+    @apply px-[71px];
   }
   .wrtting-virtual {
-    writing-mode: vertical-lr
+    writing-mode: vertical-lr;
   }
-  .triangle{
-    @apply relative before:content-[''] before:absolute before:right-0 before:bottom-0 before:border-transparent before:border-[10px] before:border-t-[#E6553B] before:translate-x-[50%] before:translate-y-[50%] before:rotate-[-45deg]
+  .triangle {
+    @apply relative before:content-[''] before:absolute before:right-0 before:bottom-0 before:border-transparent before:border-[10px] before:border-t-[#E6553B] before:translate-x-[50%] before:translate-y-[50%] before:rotate-[-45deg];
   }
-  .stroke-text{
+  .stroke-text {
     -webkit-text-stroke: 1px black;
     -webkit-text-fill-color: white;
+  }
+  .z-modal {
+    z-index: 800;
+  }
+  .font-squada {
+    font-family: 'Squada One', cursive;
   }
 }
